logs/dag_id=postgres_etl_dag/run_id=manual__2025-03-10T12:01:27.816922+00:00/task_id=create_destination_table/attempt=2.log
[2025-03-10T13:06:29.759+0100] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_etl_dag.create_destination_table manual__2025-03-10T12:01:27.816922+00:00 [queued]>
[2025-03-10T13:06:29.767+0100] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_etl_dag.create_destination_table manual__2025-03-10T12:01:27.816922+00:00 [queued]>
[2025-03-10T13:06:29.767+0100] {taskinstance.py:2170} INFO - Starting attempt 2 of 2
[2025-03-10T13:06:29.778+0100] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): create_destination_table> on 2025-03-10 12:01:27.816922+00:00
[2025-03-10T13:06:29.781+0100] {standard_task_runner.py:60} INFO - Started process 191768 to run task
[2025-03-10T13:06:29.785+0100] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'postgres_etl_dag', 'create_destination_table', 'manual__2025-03-10T12:01:27.816922+00:00', '--job-id', '6', '--raw', '--subdir', 'DAGS_FOLDER/first.py', '--cfg-path', '/tmp/tmpv7koaqt9']
[2025-03-10T13:06:29.787+0100] {standard_task_runner.py:88} INFO - Job 6: Subtask create_destination_table
[2025-03-10T13:06:29.846+0100] {task_command.py:423} INFO - Running <TaskInstance: postgres_etl_dag.create_destination_table manual__2025-03-10T12:01:27.816922+00:00 [running]> on host LAPTOP-A4DHQTS9.
[2025-03-10T13:06:29.927+0100] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='postgres_etl_dag' AIRFLOW_CTX_TASK_ID='create_destination_table' AIRFLOW_CTX_EXECUTION_DATE='2025-03-10T12:01:27.816922+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-10T12:01:27.816922+00:00'
[2025-03-10T13:06:29.938+0100] {base.py:83} INFO - Using connection ID 'postgres_dest' for task execution.
[2025-03-10T13:06:29.944+0100] {sql.py:450} INFO - Running statement: CREATE TABLE IF NOT EXIST dest_table("rownumber" bigint, "S\N" double precision, "LGA" varchar(50), "COMMUNITY NAME" varchar(100), "WARD" varchar(100), "FACILITY TYPE" varchar(50));, parameters: None
[2025-03-10T13:06:29.945+0100] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/philip/airflow/dags/first.py", line 17, in create_table
    table_creation_hook.run(sql)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXIST"
LINE 1: CREATE TABLE IF NOT EXIST dest_table("rownumber" bigint, "S\...
                            ^

[2025-03-10T13:06:29.955+0100] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=postgres_etl_dag, task_id=create_destination_table, execution_date=20250310T120127, start_date=20250310T120629, end_date=20250310T120629
[2025-03-10T13:06:29.965+0100] {standard_task_runner.py:107} ERROR - Failed to execute job 6 for task create_destination_table (syntax error at or near "EXIST"
LINE 1: CREATE TABLE IF NOT EXIST dest_table("rownumber" bigint, "S\...
                            ^
; 191768)
[2025-03-10T13:06:30.007+0100] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-03-10T13:06:30.026+0100] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
